Fixed overlapping upload screenshots button

--- a/src/sass/title.scss
+++ b/src/sass/title.scss
@@ -1,24 +1,23 @@
 .title {
-  position: relative;
+  div {
+    align-items: center;
+  }
 
-  & > h1 > small {
+  div > h1 > small {
     font-size: 16px;
   }
 
   .settings {
-    bottom: 5px;
-    position: absolute;
-    right: 0;
+    margin: 0.5rem 0 0.5rem 0;
   }
 
   .links {
-    bottom: 5px;
+    margin: 0.5rem 0;
     font-size: 24px;
-    position: absolute;
-    right: 50px;
+    float: right;
 
     a {
-      margin: 0 5px;
+      margin: 0.5rem 0.75rem 0.5rem 0;
     }
   }
 }
